--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,13 @@
 cmake_minimum_required(VERSION 3.8 FATAL_ERROR)
 
-#project(xuanwu LANGUAGES CXX CUDA)
+project(xuanwu LANGUAGES CXX CUDA)
 
 find_package(CUDA)
 
-enable_language(CUDA)
+#enable_language(CUDA)
 
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CUDA_STANDARD 14)
-
 
 add_subdirectory(easyloggingpp)
 
