--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,6 +1,6 @@
 set(CMAKE_CUDA_FLAGS ${CMAKE_CUDA_FLAGS} --expt-extended-lambda)
 
-add_executable(run_test_xuanwu run_test_xuanwu.cpp Kernels.cu run_test_dmr.cu)
+add_executable(run_test_xuanwu Kernels.cu test_dmr.cu run_test_xuanwu.cpp)
 target_link_libraries(run_test_xuanwu xuanwu gtest)
 
 add_test(run_test_xuanwu run_test_xuanwu)
