--- a/test/logging.conf
+++ b/test/logging.conf
@@ -10,7 +10,7 @@
 -- Engine
 * GLOBAL:
    FORMAT               =  "%datetime [%logger][%level] %fbase:%line: %msg"
-   ENABLED              =  false
+   ENABLED              =  true
    TO_STANDARD_OUTPUT   =  true
 * DEBUG:
    ENABLED              =  false
