--- a/test/logging.conf
+++ b/test/logging.conf
@@ -56,7 +56,7 @@
 -- Device
 * GLOBAL:
    FORMAT               =  "%datetime [%logger][%level] %fbase:%line: %msg"
-   ENABLED              =  false
+   ENABLED              =  true
    TO_STANDARD_OUTPUT   =  true
 
 -- DMR
