--- a/test/logging.conf
+++ b/test/logging.conf
@@ -13,7 +13,7 @@
    ENABLED              =  true
    TO_STANDARD_OUTPUT   =  true
 * DEBUG:
-   ENABLED              =  false
+   ENABLED              =  true
 
 -- Array
 * GLOBAL:
