--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,10 +6,12 @@ find_package(CUDA)
 
 #enable_language(CUDA)
 
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CUDA_STANDARD 14)
 
 add_subdirectory(easyloggingpp)
+
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wreturn-type")
 
 add_subdirectory(src)
 
