--- a/test/logging.conf
+++ b/test/logging.conf
@@ -10,10 +10,10 @@
 -- Engine
 * GLOBAL:
    FORMAT               =  "%datetime [%logger][%level] %fbase:%line: %msg"
-   ENABLED              =  true
+   ENABLED              =  false
    TO_STANDARD_OUTPUT   =  true
 * DEBUG:
-   ENABLED              =  true
+   ENABLED              =  false
 
 -- Array
 * GLOBAL:
@@ -24,8 +24,10 @@
 -- Worker
 * GLOBAL:
    FORMAT               =  "%datetime [%logger][%level] %fbase:%line: %msg"
-   ENABLED              =  false
+   ENABLED              =  true
    TO_STANDARD_OUTPUT   =  true
+* DEBUG:
+   ENABLED              =  false
 
 -- Allocator
 * GLOBAL:
@@ -48,10 +50,10 @@
 -- DataCopy
 * GLOBAL:
    FORMAT               =  "%datetime [%logger][%level] %fbase:%line: %msg"
-   ENABLED              =  false
+   ENABLED              =  true
    TO_STANDARD_OUTPUT   =  true
 * DEBUG:
-   ENABLED              =  false
+   ENABLED              =  true
 
 -- Device
 * GLOBAL:
