--- a/test/logging.conf
+++ b/test/logging.conf
@@ -27,7 +27,7 @@
    ENABLED              =  true
    TO_STANDARD_OUTPUT   =  true
 * DEBUG:
-   ENABLED              =  false
+   ENABLED              =  true
 
 -- Allocator
 * GLOBAL:
@@ -46,6 +46,8 @@
    FORMAT               =  "%datetime [%logger][%level] %fbase:%line: %msg"
    ENABLED              =  false
    TO_STANDARD_OUTPUT   =  true
+* DEBUG:
+   ENABLED              =  true
 
 -- DataCopy
 * GLOBAL:
