--- a/test/logging.conf
+++ b/test/logging.conf
@@ -27,7 +27,7 @@
    ENABLED              =  true
    TO_STANDARD_OUTPUT   =  true
 * DEBUG:
-   ENABLED              =  true
+   ENABLED              =  false
 
 -- Allocator
 * GLOBAL:
@@ -47,7 +47,7 @@
    ENABLED              =  false
    TO_STANDARD_OUTPUT   =  true
 * DEBUG:
-   ENABLED              =  true
+   ENABLED              =  false
 
 -- DataCopy
 * GLOBAL:
