--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
           command: |
                 mkdir build
                 cd build
-                cmake ..
+                cmake .. -DTEST=ON
                 make
 
       - run:
