--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,7 @@ if (${TEST})
 
     enable_testing()
 
-    add_subdirectory(gtest)
+    add_subdirectory(googletest)
 
     add_subdirectory(test)
 
