--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,10 +8,11 @@ jobs:
     steps:
 
       - checkout
-          post:
-            - git submodule init
-            - git submodule update
 
+      - run:
+          name: checkout submodules
+          command: |
+               git submodule update --init --recursive
 
       - run:
           name: CMake Build
