--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,6 +25,5 @@ jobs:
       - run:
           name: Run tests
           command: |
-                cd test
-                make
+                cd build/test
                 ./run_test_xuanwu
