--- a/test/logging.conf
+++ b/test/logging.conf
@@ -27,12 +27,12 @@
    ENABLED              =  true
    TO_STANDARD_OUTPUT   =  true
 * DEBUG:
-   ENABLED              =  true
+   ENABLED              =  false
 
 -- Allocator
 * GLOBAL:
    FORMAT               =  "%datetime [%logger][%level] %fbase:%line: %msg"
-   ENABLED              =  false
+   ENABLED              =  true
    TO_STANDARD_OUTPUT   =  true
 
 -- Task
@@ -47,7 +47,7 @@
    ENABLED              =  false
    TO_STANDARD_OUTPUT   =  true
 * DEBUG:
-   ENABLED              =  true
+   ENABLED              =  false
 
 -- DataCopy
 * GLOBAL:
@@ -68,4 +68,12 @@
    FORMAT               =  "%datetime [%logger][%level] %fbase:%line: %msg"
    ENABLED              =  true
    TO_STANDARD_OUTPUT   =  true
+
+-- MM
+* GLOBAL:
+   FORMAT               =  "%datetime [%logger][%level] %fbase:%line: %msg"
+   ENABLED              =  true
+   TO_STANDARD_OUTPUT   =  true
+* DEBUG:
+   ENABLED              =  false
 
