--- a/test/logging.conf
+++ b/test/logging.conf
@@ -32,8 +32,10 @@
 -- Allocator
 * GLOBAL:
    FORMAT               =  "%datetime [%logger][%level] %fbase:%line: %msg"
-   ENABLED              =  false
+   ENABLED              =  true
    TO_STANDARD_OUTPUT   =  true
+* DEBUG:
+   ENABLED              =  false
 
 -- Task
 * GLOBAL:
