--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "googletest"]
 	path = googletest
 	url = https://github.com/google/googletest.git
+[submodule "cmake-modules"]
+	path = cmake-modules
+	url = git@github.com:chnlkw/cmake-modules.git
+[submodule "cmake_modules"]
+	path = cmake_modules
+	url = git@github.com:chnlkw/cmake_modules.git
