--- a/easyloggingpp/CMakeLists.txt
+++ b/easyloggingpp/CMakeLists.txt
@@ -1,4 +1,4 @@
 
-add_library(easyloggingpp easylogging++.cc ../include/xuanwu/Config.h)
+add_library(easyloggingpp easylogging++.cc)
 target_include_directories(easyloggingpp
         PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
