--- a/test/logging.conf
+++ b/test/logging.conf
@@ -24,10 +24,10 @@
 -- Worker
 * GLOBAL:
    FORMAT               =  "%datetime [%logger][%level] %fbase:%line: %msg"
-   ENABLED              =  false
+   ENABLED              =  true
    TO_STANDARD_OUTPUT   =  true
 * DEBUG:
-   ENABLED              =  false
+   ENABLED              =  true
 
 -- Allocator
 * GLOBAL:
