--- a/test/logging.conf
+++ b/test/logging.conf
@@ -54,10 +54,10 @@
 -- DataCopy
 * GLOBAL:
    FORMAT               =  "%datetime [%logger][%level] %fbase:%line: %msg"
-   ENABLED              =  false
+   ENABLED              =  true
    TO_STANDARD_OUTPUT   =  true
 * DEBUG:
-   ENABLED              =  false
+   ENABLED              =  true
 
 -- Device
 * GLOBAL:
